WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286098
Fix some more ObjC memory leaks
https://bugs.webkit.org/show_bug.cgi?id=286098
Summary
Fix some more ObjC memory leaks
Alex Christensen
Reported
2025-01-16 15:09:27 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-16 15:09:40 PST
<
rdar://problem/143081413
>
Alex Christensen
Comment 2
2025-01-16 15:11:20 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39151
EWS
Comment 3
2025-01-17 11:23:36 PST
Committed
289078@main
(01562ca5be8e): <
https://commits.webkit.org/289078@main
> Reviewed commits have been landed. Closing PR #39151 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug