Fix some more ObjC memory leaks https://bugs.webkit.org/show_bug.cgi?id=286098 rdar://143081413

Reviewed by Wenson Hsieh.

WKQLThumbnailQueueManager isn't a memory leak, but using smart pointers
makes that more clear.

* Source/WebKit/Shared/Cocoa/CoreIPCLocale.mm:
(WebKit::CoreIPCLocale::toID const):
* Source/WebKit/UIProcess/QuickLookThumbnailLoader.h:
* Source/WebKit/UIProcess/QuickLookThumbnailLoader.mm:
(-[WKQLThumbnailQueueManager init]):
(-[WKQLThumbnailQueueManager queue]):
(+[WKQLThumbnailQueueManager sharedInstance]):
* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(+[WKUITextSelectionRect selectionRectWithCGRect:]):
* Source/WebKit/webpushd/_WKMockUserNotificationCenter.mm:
(centersByBundleIdentifier):

Canonical link: https://commits.webkit.org/289078@main